--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
+
 <link rel="stylesheet" href="style.css">
 <html>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <div>
+  <h1>Shield Design system - ATOMS</h1>
+  </div>
+
+
+    <div>
+        <button1 type="button">Click Me1!</button1>
+
+        <button type="button">Click Me!</button>
+    
+        <button type="button">Click Me!</button>
+    
+        <button type="button">Click Me!</button>
+    </div>
+   
+
     <body>
-        Hello World
+    Hello World
     </body>
 
-    <button type="button">Click Me!</button>
+
+  
 
 
 
