--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
     <div class="alllinks">
 
-
-        <button type="button" class="child1">ATOMS</button>
+      <a href="atoms.html" class="child1">ATOMS</a>
 
         <button type="button" class="child2">MOLECULES</button>
     
