--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="alllinks">
 
-      <a href="atoms.html" class="child1">ATOMS</a>
+     <button><a href="atoms.html" class="child1">ATOMS</a></button>
 
         <button type="button" class="child2">MOLECULES</button>
     
