--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <div class="alllinks">
 
-     <button><a href="atoms.html" class="child1">ATOMS</a></button>
+      <button class="child1"><a href="atoms.html">ATOMS</a></button>
+
 
         <button type="button" class="child2">MOLECULES</button>
     
