--- a/atoms.html
+++ b/atoms.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 
+<head>
+  <script src="https://kit.fontawesome.com/393c746c6e.js" crossorigin="anonymous"></script>
+
+</head>
+
+
 <link rel="stylesheet" href="style.css">
 <html>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -8,7 +14,20 @@
   <div>
     <img src="assets/shieldlogo.svg" alt="shiledlogo">
   <h1>Shield Design system</h1>
-<p>ATOMS</p>
+
+
+<button class="btn-primary">
+
+  <span class="button__text">primary</span>
+  <span class="button__icon"><i class="far fa-address-book"></i>
+  </span>
+
+
+</button>
+
+
   </div>
 
 </html>
+
+
