--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 
 <link rel="stylesheet" href="style.css">
 <html>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+   
+    <head>
+      
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+      <script src="https://kit.fontawesome.com/393c746c6e.js" crossorigin="anonymous"></script>
+
+    </head>
+
 
   <div>
     <img src="assets/shieldlogo.svg" alt="shiledlogo">
@@ -14,7 +21,7 @@
 
     <div class="alllinks">
 
-      <button class="child1"><a href="atoms.html">ATOMS</a></button>
+      <button class="child1"><a href="atoms.html" target="_blank">ATOMS</a></button>
 
 
         <button type="button" class="child2">MOLECULES</button>
