--- a/atoms.html
+++ b/atoms.html
@@ -26,6 +26,13 @@
 </button>
 
 
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname">
+</form>
+
   </div>
 
 </html>
