--- a/atoms.html
+++ b/atoms.html
@@ -16,24 +16,90 @@
   <h1>Shield Design system</h1>
 
 
-<button class="btn-primary">
 
-  <span class="button__text">primary</span>
+  
+
+<div class="wrapperbox">
+
+  <div class="blue100">
+  </div>
+
+
+  <div class="blue200">
+  </div>
+
+
+  <div class="blue300">
+  </div>
+
+
+  <div class="blue400">
+  </div>
+
+
+  <div class="blue500">
+  </div>
+
+
+  <div class="blue600">
+  </div>
+
+
+  <div class="blue700">
+  </div>
+
+
+  <div class="blue800">
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="wrapper1">
+
+<button class="btn-primary">
+  <span class="button__text">primary-button</span>
   <span class="button__icon"><i class="far fa-address-book"></i>
   </span>
-
-
 </button>
 
 
-<form>
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname">
-</form>
+<button class="btn-secondary">
+  <span class="button__text1">secondary-button</span>
+</button>
 
-  </div>
+
+
+
+<label for="fname" class="label">First Name</label>
+<input type="text" class="fname" name="firstname" placeholder="Enter firstname here">
+
+<label for="lname" class="label">Last Name</label>
+<input type="text" class="lname" name="lastname" placeholder="Enter lastname here">
+
+
+
+</div>
+
 
 </html>
 
