--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
 <p id="tb">Text body</p>
 <p id="td">Text disabled</p>
 
-
-
-
-
+<label for="fname">First Name</label>
+<input type="text" id="fname" name="firstname" placeholder="Your name..">
 
 
 
