--- a/atoms.html
+++ b/atoms.html
@@ -89,6 +89,13 @@
 
 
 
+<button class="btn-delete">
+  <span class="delete__icon"></span>
+  <span class="button__text1">Delete</span>
+</button>
+
+
+
 
 <label for="fname" class="label">First Name</label>
 <input type="text" class="fname" name="firstname" placeholder="Enter firstname here">
