--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <script src="https://kit.fontawesome.com/393c746c6e.js" crossorigin="anonymous"></script>
 
     </head>
+    <div class="container">
 
+    
 
   <div>
     <img src="assets/shieldlogo.svg" alt="shiledlogo">
@@ -37,19 +39,9 @@
 
 
 
-<h1>
-  Text types:
-</h1>
-
-<p id="tt">Text title</p>
-<p id="tp">Text primary</p>
-<p id="tb">Text body</p>
-<p id="td">Text disabled</p>
-
-<label for="fname">First Name</label>
-<input type="text" id="fname" name="firstname" placeholder="Your name..">
 
 
+</div>
 
    
 </html>
