css + html updates

--- a/atoms.html
+++ b/atoms.html
@@ -83,14 +83,17 @@
 </button>
 
 
+<button class="btn-primary">
+  <span class="button__text-1">primary-button</span>
+</button>
+
+
 <button class="btn-secondary">
   <span class="button__text1">secondary-button</span>
 </button>
 
 
-
 <button class="btn-delete">
-  <span class="delete__icon"></span>
   <span class="button__text1">Delete</span>
 </button>
 
