--- a/atoms.html
+++ b/atoms.html
@@ -83,6 +83,15 @@
 </button>
 
 
+
+<button class="btn-primary">
+  <span class="button__icon"><i class="far fa-address-book"></i>
+  <span class="button__text">primary-button</span>
+
+  </span>
+</button>
+
+
 <button class="btn-primary">
   <span class="button__text-1">primary-button</span>
 </button>
